<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_emp_attendance"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/update_attendance" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/Delete_details" />

</menu>
