<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addemp"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".attendance">

    <EditText
        android:id="@+id/topic_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:background="@color/blue"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/add_emp_attendance"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="57dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewv1"
                android:layout_width="149dp"
                android:layout_height="58dp"
                android:gravity="left|center_vertical"
                android:text="@string/emp_id"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/add_emp_ID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewv2"
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/emp_name"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/add_emp_NAME"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewv3"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/emp_ot_hrs"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_emp_OTHRS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/emp_work_days"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/add_emp_WORKDAYS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/textViewv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emp_no_pay_days"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_emp_NOPAYDAYS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:text="@string/btn_add"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_open"
        android:text="@string/btn_open" />

</LinearLayout>

